Fixed alignment of navbar on non Firefox browsers #28

--- a/themes/loconomics/assets/css/components/_PrimaryNavbar.scss
+++ b/themes/loconomics/assets/css/components/_PrimaryNavbar.scss
@@ -46,7 +46,7 @@
     }
 
     .navbar-nav {
-        justify-content: end;
+        justify-content: flex-end;
         width: 100%;
 
         .nav-item {
